Added View Customer Payment Btn

--- a/src/pages/user-profile/user-profile.scss
+++ b/src/pages/user-profile/user-profile.scss
@@ -76,7 +76,7 @@ page-user-profile {
         }
     }
   .salesmanDashboardBtn{
-      background-color: #3d9ef0;
+      background-color: #225f93;
       border-radius: 3px;
       margin-top: 16px;
       font-size: 1em;
