Minor UI Changes

--- a/src/pages/associated-customers-list-order/associated-customers-list-order.scss
+++ b/src/pages/associated-customers-list-order/associated-customers-list-order.scss
@@ -1,3 +1,11 @@
 page-associated-customers-list-order {
-
+    .order-status{
+        padding-top: 5px; 
+     }
+     .order-list-btn{
+         font-size: 12px;
+     }
+     .order-list-label{
+         color: #898989;
+     }
 }
