--- a/src/pages/oracle-connect/oracle-connect.scss
+++ b/src/pages/oracle-connect/oracle-connect.scss
@@ -1,3 +1,9 @@
 page-oracle-connect {
-
+    // ion-content{
+    //     ion-item{
+    //         button{
+    //             font-size: 14px !important;
+    //         }
+    //     }
+    // }
 }
