--- a/src/pages/customer-list-product/customer-list-product.scss
+++ b/src/pages/customer-list-product/customer-list-product.scss
@@ -2,4 +2,17 @@ page-customer-list-product {
     .search-result {
         color: white
     }
+    .noDataView{
+        padding: 20px;
+        margin-top: 30%;
+        font-size: 60px;
+        color: #225f93;
+
+        h4{
+            font-size: 2rem
+        }
+    }
+    .card {
+        border-bottom: none;
+    }
 }
