--- a/src/pages/associated-customers-list-order/associated-customers-list-order.scss
+++ b/src/pages/associated-customers-list-order/associated-customers-list-order.scss
@@ -8,4 +8,7 @@ page-associated-customers-list-order {
      .order-list-label{
          color: #898989;
      }
+     .edit-btn {
+        margin-top: 5px;
+     }
 }
