--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -41,7 +41,8 @@ $colors: (
   dark:       #222,
   full-background : #FFF,
   accent: #ffeb3b,
-  grey: #36304a
+  grey: #36304a,
+  success: #00c93cd3
 );
 
 $toolbar-md-background : color($colors, primary);
