fetch dynamic transactions and generate pdf

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -41,8 +41,8 @@ $colors: (
   dark:       #222,
   full-background : #FFF,
   accent: #ffeb3b,
-  grey: #36304a,
-  success: #00c93cd3
+  grey: #324a30,
+  success: rgb(19, 182, 46)
 );
 
 $toolbar-md-background : color($colors, primary);
