--- a/src/pages/user-statements/user-statements.scss
+++ b/src/pages/user-statements/user-statements.scss
@@ -21,7 +21,7 @@ page-user-statements {
             font-weight: 500 !important;
         }
         .credit{
-            color: #00c93cd3;
+            color: green;
         }
         .debit{
             color: #f53d3d;
