--- a/src/pages/tk-products-list/tk-products-list.scss
+++ b/src/pages/tk-products-list/tk-products-list.scss
@@ -83,4 +83,9 @@ page-tk-products-list {
 .expandable-content.collapsed{
     height: 0 !important;
 }
+
+virtual-scroller {
+    width: 380px;
+    height: 1000px;
+}
   
