--- a/src/pages/tk-products-list/tk-products-list.scss
+++ b/src/pages/tk-products-list/tk-products-list.scss
@@ -11,7 +11,7 @@ page-tk-products-list {
     ion-content{
         background: aliceblue !important;
         .scroll-content{
-            padding: 0 !important;
+            padding: 20px 0 !important;
         }
     }
     .tk-product-container{
