Updated TK Competitive Products List

--- a/src/pages/price-capturing-product-list/price-capturing-product-list.scss
+++ b/src/pages/price-capturing-product-list/price-capturing-product-list.scss
@@ -1,3 +1,15 @@
 page-price-capturing-product-list {
-
+    ion-searchbar{
+        .searchbar-input{
+            box-shadow: none !important;
+        }
+    }
+    ion-grid{
+        padding: 0 !important;
+    }
+    ion-footer{
+        button{
+            margin: 0 !important;
+        }
+    }
 }
