Updated Emty State View

--- a/src/pages/price-capturing-product-list/price-capturing-product-list.scss
+++ b/src/pages/price-capturing-product-list/price-capturing-product-list.scss
@@ -12,4 +12,9 @@ page-price-capturing-product-list {
             margin: 0 !important;
         }
     }
+    .empty-state{
+        img{
+            padding: 20px 40%;
+        }
+    }
 }
