add in-trnasit code

--- a/src/pages/admin-list-product/admin-list-product.scss
+++ b/src/pages/admin-list-product/admin-list-product.scss
@@ -1,3 +1,9 @@
 page-admin-list-product {
-
+    .in-transit {
+        color: green;
+        font-size: 12px;
+    }
+    .warehouse {
+        text-align: center;
+    }
 }
