--- a/src/pages/gift-rewards/gift-rewards.scss
+++ b/src/pages/gift-rewards/gift-rewards.scss
@@ -68,7 +68,7 @@ page-gift-rewards {
     display: block;
   }
   .checkout {
-      background: #225f93;
+      background: color($colors, primary);
       padding: 20px 0;
       color: #fff;
   }
