--- a/src/pages/selected-customer-order-list/selected-customer-order-list.scss
+++ b/src/pages/selected-customer-order-list/selected-customer-order-list.scss
@@ -3,7 +3,7 @@ page-selected-customer-order-list {
         padding: 20px;
         margin-top: 30%;
         font-size: 60px;
-        color: #225f93;
+        color: color($colors, primary);
 
         h4{
             font-size: 2rem
