--- a/src/pages/sm-edit-order/sm-edit-order.scss
+++ b/src/pages/sm-edit-order/sm-edit-order.scss
@@ -22,7 +22,7 @@ page-sm-edit-order {
             content: '+';
             position: absolute;
             right: 0;
-            background: #229bd0;
+            background: color($colors, primary);
             border-radius: 12px;
             height: 24px;
             width: 24px;
