--- a/src/pages/user-payment-history/user-payment-history.scss
+++ b/src/pages/user-payment-history/user-payment-history.scss
@@ -12,7 +12,7 @@ page-user-payment-history {
             padding: 20px;
             margin-top: 30%;
             font-size: 60px;
-            color: #225f93;
+            color: color($colors, primary);
 
             h4{
                 font-size: 2rem
