--- a/src/pages/admin-list-product/admin-list-product.scss
+++ b/src/pages/admin-list-product/admin-list-product.scss
@@ -1,6 +1,6 @@
 page-admin-list-product {
     .in-transit {
-        color: green;
+        color: color($colors, success);
         font-size: 12px;
     }
     .warehouse {
