--- a/src/pages/admin-list-user/admin-list-user.scss
+++ b/src/pages/admin-list-user/admin-list-user.scss
@@ -18,7 +18,7 @@ page-admin-list-user {
             padding: 20px;
             margin-top: 30%;
             font-size: 60px;
-            color: #225f93;
+            color: color($colors, primary);
 
             h4{
                 font-size: 2rem
