--- a/src/pages/customer-list-product/customer-list-product.scss
+++ b/src/pages/customer-list-product/customer-list-product.scss
@@ -6,7 +6,7 @@ page-customer-list-product {
         padding: 20px;
         margin-top: 30%;
         font-size: 60px;
-        color: #225f93;
+        color: color($colors, primary);
 
         h4{
             font-size: 2rem
