--- a/src/pages/gift-checkout/gift-checkout.scss
+++ b/src/pages/gift-checkout/gift-checkout.scss
@@ -22,7 +22,7 @@ page-gift-checkout {
       content: '+';
       position: absolute;
       right: 0;
-      background: #229bd0;
+      background: color($colors, primary);
       border-radius: 12px;
       height: 24px;
       width: 24px;
