--- a/src/pages/tk-faq/tk-faq.scss
+++ b/src/pages/tk-faq/tk-faq.scss
@@ -9,7 +9,7 @@ page-tk-faq {
             content: '+';
             position: absolute;
             right: 0;
-            background: #229bd0;
+            background: color($colors, primary);
             border-radius: 12px;
             height: 24px;
             width: 24px;
